--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 }
 
 .smallContainer{
-  padding: 0px 100px 100px 100px;
-  text-align: center;
+  padding: 0px 250px;
+  text-align: left;
 }
 
 .usaMap{
