--- a/style.css
+++ b/style.css
@@ -11,8 +11,16 @@
 }
 
 .smallContainer{
-  padding: 0px 250px;
   text-align: left;
+}
+
+#smallCpadding{
+  padding: 0px 250px
+}
+
+.secondpagepadding{
+  padding: 0px 0px 100px 100px;
+
 }
 
 .usaMap{
